--- a/EntityModelsAndQueries/EntityModelsAndQueries.csproj
+++ b/EntityModelsAndQueries/EntityModelsAndQueries.csproj
@@ -173,8 +173,12 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Domain\Customer.cs" />
+    <Compile Include="Models\Domain\Reservation.cs" />
+    <Compile Include="Models\Domain\Room.cs" />
+    <Compile Include="Models\Domain\Type.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
